methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: not found: value vuBiscuit
  vuBiscuit==false
  ^MethodsReturning:5: error: not found: value vuBiscuit
      vuBiscuit=true
      ^MethodsReturning:9: error: not found: value vuBiscuit
  return vuBiscuit
         ^