methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  vuBiscuit==false
  for ( a <- 1 to 7) {
 	 if (estSurBiscuit()==true) {
    	vuBiscuit=true
  	}
    avance();
  }
  return vuBiscuit
}

haveBaggle()